{
    "name": "ControllerScheme",
    "maps": [
        {
            "name": "Gameplay",
            "id": "c8952581-94b7-4ae3-9278-a4b176b71957",
            "actions": [
                {
                    "name": "LeftArmMovement",
                    "type": "Button",
                    "id": "34f7cb4b-4591-4b7e-a6c5-ac22ec0eaf03",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightArmMovement",
                    "type": "Button",
                    "id": "c4d23a47-5b20-45da-bf94-e4738f90e771",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftTrigger",
                    "type": "Button",
                    "id": "67d2dc80-6132-4754-a12a-e7cb7f4b880f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightTrigger",
                    "type": "Button",
                    "id": "e876a7de-c34a-478d-8930-4b34c3fbfaec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftShoulder",
                    "type": "Button",
                    "id": "0eeffd64-8296-4b00-89bb-0562720d6e13",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightShoulder",
                    "type": "Button",
                    "id": "de064034-bbff-40ad-a87d-6478c3e7047c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftPrime",
                    "type": "Button",
                    "id": "10b988f7-eac2-4c7a-b155-4db2de9d54f2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightPrime",
                    "type": "Button",
                    "id": "09e92b99-4c82-4328-9bb2-49a98ddb6f3c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WeaponSwapLeft",
                    "type": "Button",
                    "id": "d1e245cf-600d-4624-88f5-e5a20b00496b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WeaponSwapRight",
                    "type": "Button",
                    "id": "96eaf2a8-3988-477e-9bdf-237386f22872",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "18696f7b-5075-4d20-b72f-c60429f3b084",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftArmMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7701b0f6-9403-47bc-83e9-393c12a11ca0",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f67edb44-30fc-4c0c-8682-1c746832a182",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b124eaf-9abb-49aa-a56a-687507b3e8f7",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightArmMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7627470-94b3-4fd3-a5b4-f8cf91010b18",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftPrime",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f7ad82ae-6635-49e8-b45f-5727fd9547e1",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponSwapLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77776047-b195-46f5-a7be-bc125620b96e",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponSwapLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d51c44e-262f-4cda-a141-8a44db4014de",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponSwapRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8937c0c-7470-4590-b114-555f25566059",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponSwapRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cae7a3c1-756f-43da-9ae7-18d176bec772",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightPrime",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}